--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,15 +20,18 @@
         </activity>
 
         <activity
-            android:name=".ut02_sharedpreferences.SharedPreferencesActivity"
+            android:name=".ut02.SharedPreferencesActivity"
             android:exported="true">
+        </activity>
 
+        <activity
+            android:name=".ut02.exercise02.Exercise02Activity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
