--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ADDPlayground">
         <activity
+            android:name=".ut03.ex02.ex02_1.presentation.Ut03Ex02Activity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
 
@@ -23,12 +26,10 @@
         </activity>
         <activity
             android:name=".ut02.SharedPreferencesActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ut02.exercise02.Exercise02Activity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ut03.DatabaseActivity"
             android:exported="true">
