--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ADDPlayground">
         <activity
-            android:name=".ut03.ex03.presentation.Ut03Ex03Activity"
-            android:exported="true" />
-        <activity
             android:name=".MainActivity"
             android:exported="true">
 
@@ -26,15 +23,26 @@
         </activity>
         <activity
             android:name=".ut02.SharedPreferencesActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut02.exercise02.Exercise02Activity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut02.DatabaseActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut03.ex02.presentation.Ut03Ex02Activity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".ut03.ex03.presentation.Ut03Ex03Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
