--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation('androidx.recyclerview:recyclerview-selection:1.1.0')
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     //Room library
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
