--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,21 +26,26 @@
         </activity>
         <activity
             android:name=".ut02.SharedPreferencesActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ut02.ex02.Exercise02Activity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ut02.DatabaseActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ut03.ex02.presentation.Ut03Ex02Activity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ut03.ex03.presentation.Ut03Ex03Activity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ut01.ex02.Ut01Ex02"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".ut03.ex04.presentation.Ut03Ex04Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
