ut02_ex04_xml finalized

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ADDPlayground">
-        <activity
-            android:name=".ut02.ex04.presentation.Ut02Ex02"
-            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -26,22 +24,37 @@
         </activity>
         <activity
             android:name=".ut02.SharedPreferencesActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut02.ex02.Exercise02Activity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut02.DatabaseActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut03.ex02.presentation.Ut03Ex02Activity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut03.ex03.presentation.Ut03Ex03Activity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ut01.ex02.Ut01Ex02"
             android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".ut02.ex04.presentation.Ut02Ex04"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
